neutron/tests/common/gce/data/network/get_firewall.json
{
    "kind": "compute#firewall",
    "id": "8190563572741527930",
    "creationTimestamp": "2017-05-31T08:56:05.530-07:00",
    "name": "secgrp-67f979a1-7a9d-471f-be37-ef08bdba0ac6",
    "description": "",
    "network": "projects/omni-163105/global/networks/net-03c4f178-670e-4805-a511-9470ca4a0b06",
    "priority": 1000,
    "sourceRanges": [
        "0.0.0.0/0"
    ],
    "allowed": [
        {
            "IPProtocol": "all"
        }
    ],
    "direction": "INGRESS",
    "selfLink": "projects/omni-163105/global/firewalls/secgrp-67f979a1-7a9d-471f-be37-ef08bdba0ac6"
}
