neutron/tests/common/gce/data/network/get_network.json
{
    "kind": "compute#network",
    "description": "Default network for the project",
    "subnetworks": [
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-east1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/asia-east1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/europe-west1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-east4/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/asia-southeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/asia-northeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-west1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-central1/subnetworks/default"
    ],
    "autoCreateSubnetworks": true,
    "creationTimestamp": "2017-03-30T07:34:48.581-07:00",
    "id": "1001471773070371175",
    "selfLink": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/networks/default",
    "name": "default"
}
